# jbatch

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
config/: jb_config.yaml
jbatch/: __init__.py  __main__.py  err  out  sa  sc  scripts.py  sq
src/: cp_config.sh
