[tool.poetry]
name = "jbatch"
version = "0.2.1"
description = "Simple tool to wrap and execute sbatch commands from Jupyter Notebook cells with Conda envs"
authors = ["Dmitry Solovey <dsolovey@ist.ac.at>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
jbatch = 'jbatch.__main__:main'
jb = 'jbatch.__main__:main'
err = 'jbatch.scripts:err'
out = 'jbatch.scripts:out'
sa = 'jbatch.scripts:sa'
sc = 'jbatch.scripts:sc'
sq = 'jbatch.scripts:sq'